# zuko

./: .gitignore  .gitmodules  .lychee.toml  .swiftlint.yml  Cargo.toml  Justfile  LICENSE  README.md  REVIEW.md  book.toml  build.rs  codemagic.yaml  hk.pkl  mise.ios.toml  mise.toml  uniffi-bindgen.rs  uniffi.toml
.github/actions/cache-flutter/: action.yml
.github/actions/cache-rust/: action.yml
.github/actions/setup-codemagic/: action.yml
.github/actions/setup-flutter/: action.yml
.github/workflows/: bootstrap-xtoolsdk.yml  build-android.yml  build-flutter.yml  build-host.yml  build-ios.yml  build.yml  ci.yml  docs.yml  prepare-release.yml  publish-appetize.yml  publish-crate.yml  publish-flutter-android.yml  publish-flutter-windows.yml  publish-testflight.yml  release-flutter-ios.yml  release-flutter-macos.yml  release-host.yml  release-ios.yml  release.yml
android/: NATIVE.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  zuko_terminal_jni.c
android/core/: build.gradle.kts
containers/: flatpak-test.Containerfile  flutter-ci.Containerfile  flutter-ci.ignore  flutter-flatpak.Containerfile  flutter-flatpak.ignore  flutter-linux.Containerfile  flutter-linux.ignore
docker/xtool-smoke/: Dockerfile
docs/: CLIENTS.md  HOST.md  PROTOCOL.md  README.md  RELEASING.md  SUMMARY.md  android-publishing.md  app.md  appetize.md  apple-publishing.md  building-clients.md  clients.md  contributing.md  design.md  distribution-setup.md  flatpark.md  flutter-design.md  getting-started.md  host.md  install.sh  platform-support.md  protocol.md  releasing.md  roadmap.md  security.md  targets.md  tunnel.md  windows-publishing.md  windows-wsl2.md
examples/: app_graphics_bench.rs  protocol_bench.rs
flatpak/: README.md  dev.adonm.zuko.desktop  dev.adonm.zuko.json  dev.adonm.zuko.metainfo.xml  zuko-flatpak-repo.gpg  zuko.flatpakref  zuko.flatpakrepo
flutter/: README.md  pubspec.yaml  pubspec_overrides.yaml
flutter/android/app/: build.gradle.kts
flutter/assets/: FONTS.md
flutter/ios/: .gitignore  Podfile
flutter/ios/Flutter/: Debug.xcconfig  Release.xcconfig
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/src/: app.dart  app_controller.dart  bootstrap.dart  client_name.dart  device_hostname.dart  device_hostname_io.dart  device_hostname_stub.dart  identity.dart  model.dart  pairing_code.dart  pairing_scanner.dart  pairing_scanner_native.dart  pairing_scanner_stub.dart  pairing_screen.dart  session_io.dart  session_state.dart  storage.dart  terminal_connection.dart  theme.dart  ticket.dart  transport.dart  transport_factory.dart  transport_native.dart  transport_web.dart  window_frame.dart  wire.dart
flutter/linux/: CMakeLists.txt  README.md
flutter/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter/linux/runner/: my_application.cc
flutter/macos/: Podfile
flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/macos/Runner/: DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/rust/web_transport/: Cargo.toml
flutter/rust/web_transport/src/: lib.rs
flutter/test/: accessibility_journey_test.dart  app_layout_test.dart  app_link_test.dart  app_theme_test.dart  bootstrap_test.dart  client_name_test.dart  identity_test.dart  model_test.dart  pairing_code_test.dart  pairing_screen_test.dart  session_integration_test.dart  session_io_test.dart  session_state_test.dart  storage_test.dart  terminal_connection_test.dart  terminal_font_test.dart  wire_test.dart
flutter/web/: bootstrap.js  flutter_bootstrap.js  index.html  manifest.json  zuko_bridge.js
flutter/windows/: CMakeLists.txt
flutter/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter/windows/runner/: Runner.rc  main.cpp
flutter/windows/store/: AppxManifest.xml.in  Package.ps1  README.md  Test-Package.ps1  Test-PartnerCenter.ps1  Test-ReleaseSource.ps1  (+3 more)
host/: Cargo.toml  README.md
host/scripts/: dev.adonm.zuko.host.plist  install.sh  zuko-host.service  zuko-host.sh
host/src/: main.rs
ios/: DISTRIBUTION.md  Gemfile  Package.swift  xtool.yml
ios/Zuko/: README.md  project.yml
ios/ZukoFFI/: Package.swift
ios/ZukoWire/: Package.swift
ios/fastlane/: Appfile  Fastfile
scripts/: android-prepare-aab.sh  android-release-metadata.py  android-upload-google-play.sh  android-validate-aab.sh  apple-setup-signing.sh  apple-upload.sh  apple-validate-package.sh  build-android-native.sh  build-android-store-bundle.sh  build-ffi.sh  build-flatpak-repository.sh  build-flatpark-test-bundle.sh  build-flutter-linux-release.sh  build-ios-xtool.sh  build-web.sh  bundle-cage.sh  check-codemagic-release-candidate.py  check-crate-package.sh  check-dart-format.py  check-flutter-config.py  check-release-metadata.py  codemagic-requirements.txt  codemagic_api.py  collect-codemagic-release.py  configure-android-signing.sh  container-engine.sh  container-flutter.sh  container-linux.sh  crate-publish-status.sh  finalize-web-build.py  find_github_candidate.py  generate-icons.sh  install-android-platform-tools.sh  install-codemagic.sh  install-flatpak-llvm.sh  install-flatpak-sysroot.sh  install-freedesktop-llvm.sh  install-mise-codemagic.ps1  install-mise-codemagic.sh  install_flutter_gtk4_sdk.py  (+47 more)
src/: client.rs  code.rs  control.rs  ffi.rs  files.rs  handoff.rs  host.rs  lib.rs  main.rs  secret.rs  service.rs  store.rs  ticket_file.rs  tunnel.rs  wire.rs
src/app/: imp.rs  mod.rs
tests/: app_doctor.rs  e2e.rs
theme/: head.hbs  mermaid.js
web/: deno.json  index.html  package.json  vite.config.ts
web/src/: main.ts  storage.ts  style.css  vite-env.d.ts  wasm.d.ts
web/wasm/: Cargo.toml
zuko/: Cargo.toml  README.md
zuko/scripts/: dev.adonm.zuko.host.plist  e2e_test.py  install.sh  release.sh  zuko-host.service  zuko-host.sh
zuko/src/: client.rs  code.rs  handoff.rs  host.rs  main.rs  share.rs  store.rs  ticket_file.rs
(+63 files in other folders)
