[package]
name = "zuko"
version = "0.6.12"
edition = "2024"
license = "Apache-2.0"
description = "Remote terminals over Iroh: the host daemon and reference CLI client."
repository = "https://github.com/adonm/zuko"
publish = false

[[bin]]
name = "zuko"
path = "src/main.rs"

# One-liner wrapper around `uniffi::uniffi_bindgen_main()`, so the Swift
# bindings can be generated with `cargo run --bin uniffi-bindgen -- generate
# --language swift ...` without a separate `cargo install` step. Only used at
# XCFramework build time; not part of the `zuko` CLI.
[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
name = "zuko"
# `rlib` for the binary + tests; `staticlib` so the iOS app can wrap the
# FFI surface (src/ffi.rs) into an XCFramework.
crate-type = ["rlib", "staticlib"]

[dependencies]
# iroh is intentionally NOT here — see the target-cfg'd block below for why.
# Memory-hard KDF for deriving the throwaway handoff key from a memorable code
# (`zuko share`/`claim`). Replaces a single unsalted SHA-256 so the ~52-bit
# code resists offline brute-force if the ephemeral NodeId leaks.
argon2 = "0.5"
anyhow = "1"
# `#[derive(thiserror::Error)]` for the FFI error enum (uniffi requires a
# proper Error type, not a bare String).
thiserror = "1"
# FFI bindings for mobile clients (the iOS app's `Zuko.xcframework`).
# Pinned to 0.31 to match iroh-ffi so both XCFrameworks link cleanly together.
# `cli` feature provides `uniffi_bindgen_main()`, used by the `uniffi-bindgen`
# binary wrapper (see [[bin]] above) to generate Swift bindings at build time.
uniffi = { version = "0.31", features = ["cli"] }

# Host/client-only deps — NOT compiled for iOS (the FFI build only needs
# `code.rs` + `ffi.rs`, which are synchronous and pull in none of these).
# `portable-pty` uses Linux/macOS ioctl symbols that don't exist on iOS;
# `crossterm` + `inquire` are interactive-terminal-only; etc. Target-cfg
# keeps the CLI build unchanged while letting `cargo build --lib --target
# *-apple-ios*` succeed.
#
# `iroh` lives here (not in the unconditional `[dependencies]` above) because
# the iOS FFI exposes only `derive_seed` — pure Argon2, no iroh types across
# the boundary. Keeping iroh off iOS in turn keeps `ring` (iroh's transitive
# C/asm dep) off iOS, which lets `build-ffi.sh` cross-compile from Linux
# without `xcrun` (which doesn't exist outside macOS).
[target.'cfg(not(target_os = "ios"))'.dependencies]
iroh = "1.0"
iroh-tickets = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "signal", "time"] }
portable-pty = "0.8"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Cross-process advisory locking for the saved-hosts file (`zuko add`/`rm`).
fs4 = "0.12"
# Interactive host picker for bare `zuko` (arrow-key Select with filtering).
# Builds on crossterm (already a dep), so the marginal weight is small.
inquire = "0.7"
# Memorable 2-word pairing codes (adjective-noun from petname's large
# wordlist) for `zuko share`. `default-features = false` drops clap + default
# RNG; `default-words` brings in the embedded wordlists (small/medium/large).
petname = { version = "3", default-features = false, features = ["default-words"] }
# RNG for generate_code (petname's generate_into takes a &mut dyn Rng).
rand = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
# Size-conscious defaults for a release CLI: no bespoke code, just standard
# cargo hygiene. The binary is I/O-bound (shuttling bytes between an Iroh
# stream and a PTY / the local terminal), so size-opt + fat LTO is the right
# trade and costs only a slower release link (fine — it runs on tags only).
#
# No panic=abort: the client puts the terminal into raw mode and relies on a
# Drop guard to restore it; unwinding makes that guard run even on a panic.
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
