[package]
name = "zuko"
version = "0.9.2"
edition = "2024"
license = "Apache-2.0"
description = "Remote terminals over Iroh: the host daemon and reference CLI client."
repository = "https://github.com/adonm/zuko"
publish = false

[[bin]]
name = "zuko"
path = "src/main.rs"

# One-liner wrapper around `uniffi::uniffi_bindgen_main()`, so the Swift
# bindings can be generated with `cargo run --bin uniffi-bindgen -- generate
# --language swift ...` without a separate `cargo install` step. Only used at
# XCFramework build time; not part of the `zuko` CLI.
[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
name = "zuko"
# `rlib` for the binary + tests; `staticlib` for the iOS XCFramework; and
# `cdylib` for Android/JNA. Mobile builds expose only the small FFI surface in
# `src/ffi.rs` and cfg-exclude the desktop client/PTY dependency graph.
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
# iroh is intentionally NOT here — see the target-cfg'd block below for why.
# Memory-hard KDF for deriving the throwaway handoff key from a memorable code
# (`zuko share`/`claim`). Replaces a single unsalted SHA-256 so the ~28-bit
# code resists offline brute-force if the ephemeral NodeId leaks.
argon2 = "0.5"
anyhow = "1"
# `#[derive(thiserror::Error)]` for the FFI error enum (uniffi requires a
# proper Error type, not a bare String).
thiserror = "1"
# FFI bindings for mobile clients (the iOS app's `Zuko.xcframework`).
# Pinned to 0.31 to match iroh-ffi so both XCFrameworks link cleanly together.
# `cli` feature provides `uniffi_bindgen_main()`, used by the `uniffi-bindgen`
# binary wrapper (see [[bin]] above) to generate Swift bindings at build time.
uniffi = { version = "0.31", features = ["cli"] }

# Host/client-only deps — NOT compiled for iOS (the FFI build only needs
# `code.rs` + `ffi.rs`, which are synchronous and pull in none of these).
# `portable-pty` uses Linux/macOS ioctl symbols that don't exist on iOS;
# `crossterm` + `inquire` are interactive-terminal-only; etc. Target-cfg
# keeps the CLI build unchanged while letting `cargo build --lib --target
# *-apple-ios*` succeed.
#
# `iroh` lives here (not in the unconditional `[dependencies]` above) because
# the iOS FFI exposes only `derive_seed` — pure Argon2, no iroh types across
# the boundary. Keeping iroh off iOS in turn keeps `ring` (iroh's transitive
# C/asm dep) off iOS, which lets `build-ffi.sh` cross-compile from Linux
# without `xcrun` (which doesn't exist outside macOS).
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
iroh = "1.0"
iroh-tickets = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "signal", "time"] }
portable-pty = "0.8"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Cross-process advisory locking for the saved-hosts file (`zuko add`/`rm`).
fs4 = "0.12"
# Interactive host picker for bare `zuko` (arrow-key Select with filtering).
# Builds on crossterm (already a dep), so the marginal weight is small.
inquire = "0.7"
# Memorable 2-word pairing codes (adjective-noun from petname's large
# wordlist) for `zuko share`. `default-features = false` drops clap + default
# RNG; `default-words` brings in the embedded wordlists (small/medium/large).
petname = { version = "3", default-features = false, features = ["default-words"] }
# RNG for generate_code (petname's generate_into takes a &mut dyn Rng).
rand = "0.10"
# Render the one-time `zuko://pair/<code>` value as a terminal QR code for the
# iOS scanner. No image encoders are needed; only the Unicode renderer is used.
qrcode = { version = "0.14", default-features = false }
# SHA-256 for deriving a stable, per-(client,host) reattach token from the
# client's persistent key (so a client always lands on the same host PTY
# across reconnects and process restarts). Already compiled transitively via
# iroh/ring; listed directly so we don't lean on a transitive crate.
sha2 = "0.10"
# Parse Exec= lines from .desktop files for `zuko app <alias>` resolution.
shell-words = "1"
# TIOCGWINSZ ioctl to read terminal pixel size: the client sends pixels to the
# host so a host-side `zuko app` renders at the client's real resolution.
libc = "0.2"

# Linux-only `zuko app` backend. zuko spawns cage (a mature wlroots kiosk) as a
# subprocess — cage does the compositing/output/scale/xdg-shell/seat work in
# pure software (WLR_RENDERER=pixman, WLR_BACKENDS=headless); zuko is just a
# Wayland client over cage's private socket (wlr-screencopy to pull frames,
# virtual-keyboard/virtual-pointer to inject input). This replaces the earlier
# in-process Smithay compositor and removes the "guess the terminal's pixel
# size" failure mode: zuko sizes cage from terminal pixels and updates the
# output through wlr-output-management when the terminal is resized.
[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols-misc = { version = "0.3", features = ["client"] }
rustix = { version = "0.38", features = ["fs"] }
memmap2 = "0.9"
base64 = "0.22"
png = "0.18"

[dev-dependencies]
tempfile = "3"

[profile.release]
# Size-conscious defaults for a release CLI: no bespoke code, just standard
# cargo hygiene. The binary is I/O-bound (shuttling bytes between an Iroh
# stream and a PTY / the local terminal), so size-opt + fat LTO is the right
# trade and costs only a slower release link (fine — it runs on tags only).
#
# No panic=abort: the client puts the terminal into raw mode and relies on a
# Drop guard to restore it; unwinding makes that guard run even on a panic.
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"

# [TEMP-PATCH] crossterm 0.28.1/0.29.0 panic on SGR-pixel mouse: the unix
# parser does an unchecked `coord - 1` that overflows (panics in debug) when a
# terminal reports a 0-based pixel coordinate (Ghostty on the top row),
# crashing `zuko app` on click. The fix (saturating_sub) is on crossterm
# master but UNRELEASED, so we patch from git until a fixed version ships on
# crates.io. Drop this patch + re-pin to the published crate once ≥0.29.1 (or
# whatever release includes the "Fix integer underflow" CHANGELOG entry) lands.
[patch.crates-io]
crossterm = { git = "https://github.com/crossterm-rs/crossterm.git", rev = "3cea5b2d1d0c1cd4f285d18791b32e4b15e9bc0e" }
