[workspace]
members = ["."]
default-members = ["."]
resolver = "3"

[workspace.package]
version = "0.9.21"
edition = "2024"
license = "Apache-2.0"

[package]
name = "zuko"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote terminals over Iroh: the host daemon and reference CLI client."
repository = "https://github.com/adonm/zuko"
homepage = "https://zuko.adonm.dev/"
readme = "README.md"
publish = ["crates-io"]
keywords = ["terminal", "remote", "shell", "iroh", "p2p"]
categories = ["command-line-utilities", "network-programming"]
include = [
  "src/**/*.rs",
  "src/app/keymap_us.xkb",
  "build.rs",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE",
]

[[bin]]
name = "zuko"
path = "src/main.rs"

[dependencies]
# Memory-hard KDF for deriving the throwaway handoff key from a memorable code
# (`zuko share`/`claim`). Replaces a single unsalted SHA-256 so the ~28-bit
# code resists offline brute-force if the ephemeral NodeId leaks.
argon2 = "0.5"
anyhow = "1"
iroh = "1.0"
iroh-tickets = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "signal", "time", "net"] }
portable-pty = "0.8"
crossterm = { package = "crossterm-zuko", version = "=0.29.0-zuko.1", git = "https://github.com/adonm/crossterm.git", tag = "crossterm-zuko-v0.29.0-zuko.1" }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Cross-process advisory locking for the saved-hosts file (`zuko add`/`rm`).
fs4 = "0.12"
# Interactive host picker for bare `zuko` (arrow-key Select with filtering).
# Builds on crossterm (already a dep), so the marginal weight is small.
inquire = "0.7"
# Memorable 2-word pairing codes (adjective-noun from petname's large
# wordlist) for `zuko share`. `default-features = false` drops clap + default
# RNG; `default-words` brings in the embedded wordlists (small/medium/large).
petname = { version = "3", default-features = false, features = ["default-words"] }
# RNG for generate_code (petname's generate_into takes a &mut dyn Rng).
rand = "0.10"
# Render the one-time `zuko://pair/<code>` value as a terminal QR code for the
# mobile scanner. No image encoders are needed; only the Unicode renderer is used.
qrcode = { version = "0.14", default-features = false }
# SHA-256 for deriving a stable, per-(client,host) reattach token from the
# client's persistent key (so a client always lands on the same host PTY
# across reconnects and process restarts). Already compiled transitively via
# iroh/ring; listed directly so we don't lean on a transitive crate.
sha2 = "0.10"
# Parse Exec= lines from .desktop files for `zuko app <alias>` resolution.
shell-words = "1"
# TIOCGWINSZ ioctl to read terminal pixel size: the client sends pixels to the
# host so a host-side `zuko app` renders at the client's real resolution.
libc = "0.2"
# Open the client-loopback endpoint for `zuko tunnel`; raw tunnel traffic does
# not depend on any HTTP/TLS implementation in Zuko itself.
webbrowser = { version = "1.2.1", features = ["hardened"] }

# Linux-only `zuko app` backend. zuko spawns cage (a mature wlroots kiosk) as a
# subprocess — cage does the compositing/output/scale/xdg-shell/seat work in
# pure software (WLR_RENDERER=pixman, WLR_BACKENDS=headless); zuko is just a
# Wayland client over cage's private socket (wlr-screencopy to pull frames,
# virtual-keyboard/virtual-pointer to inject input). This replaces the earlier
# in-process Smithay compositor and removes the "guess the terminal's pixel
# size" failure mode: zuko sizes cage from terminal pixels and updates the
# output through wlr-output-management when the terminal is resized.
[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols-misc = { version = "0.3", features = ["client"] }
rustix = { version = "0.38", features = ["fs"] }
memmap2 = "0.9"
base64 = "0.22"
png = "0.18"

[dev-dependencies]
tempfile = "3"

[profile.release]
# Size-conscious defaults for a release CLI: no bespoke code, just standard
# cargo hygiene. The binary is I/O-bound (shuttling bytes between an Iroh
# stream and a PTY / the local terminal), so size-opt + fat LTO is the right
# trade and costs only a slower release link (fine — it runs on tags only).
#
# No panic=abort: the client puts the terminal into raw mode and relies on a
# Drop guard to restore it; unwinding makes that guard run even on a panic.
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"

# `crossterm-zuko` is a temporary source-compatible package whose library name
# remains `crossterm`. Development resolves its immutable Git tag; Cargo strips
# the Git source when packaging and retains the exact crates.io fallback. This
# keeps Zuko publishable without reverting the zero-coordinate parser fix.
