[package]
name = "zuko-host"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Host-side daemon for Zuko: exposes an interactive shell over an Iroh connection."
repository = "https://github.com/adonm/zuko"
publish = false

[[bin]]
name = "zuko-host"
path = "src/main.rs"

[dependencies]
iroh = "1.0"
iroh-tickets = "1.0"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
