[workspace]

[package]
name = "zuko-web"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-channel = "2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
iroh = { version = "1", default-features = false, features = ["tls-ring"] }
iroh-tickets = "1"
n0-future = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
tokio = { version = "1", default-features = false, features = ["io-util", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1"
js-sys = "0.3"
wasm-bindgen = "=0.2.122"
wasm-bindgen-futures = "0.4.72"
wasm-streams = "0.5"

[profile.release]
codegen-units = 1
strip = "symbols"
debug = false
lto = true
opt-level = "z"
panic = "abort"
